--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "vault-k8s-mapper"
-version = "0.1.2"
+version = "0.2.4"
 description = ""
 authors = ["Your Name <you@example.com>"]
 license = "MIT"
@@ -15,6 +15,8 @@ python-dotenv = "^0.10.5"
 [tool.poetry.dev-dependencies]
 black = {version = "^18.3-alpha.0", allow-prereleases = true}
 pylint = "^2.4.4"
+pytest = "^5.3.4"
+coverage = "^5.0.3"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
