--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ license = "MIT"
 python = "^3.7"
 hvac = "^0.9.6"
 kubernetes = "^10.0"
-pyyaml = "^5.4"
 python-dotenv = "^0.10.5"
 
 [tool.poetry.dev-dependencies]
@@ -17,6 +16,10 @@ black = {version = "^18.3-alpha.0", allow-prereleases = true}
 pylint = "^2.4.4"
 pytest = "^5.3.4"
 coverage = "^5.0.3"
+
+[tool.poetry.group.dev.dependencies]
+safety = "^3.2.11"
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
